tests/syntactic/sourceloc4/sourceloc4.err
Error: syntax error, unexpected . in file sourceloc4.dl at line 4
.bad
^----
1 errors generated, evaluation aborted
